--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tip Calculator</title>
+
 </head>
 <body>
-    
+    <div>
+        <h1>Tip Calculator</h1>
+        <p>Enter the bill amount and tip percentage to calculate the total.</p>
+        <div>
+            <input type="number" placeholder="Bill amount">
+            <input type="number" placeholder="Tip percentage">
+        </div>
+    </div>
+
+
 </body>
 </html>
